--- a/frontend/src/ComponentsCSS/auth.css
+++ b/frontend/src/ComponentsCSS/auth.css
@@ -156,6 +156,8 @@
   transition: all 0.3s ease;
   width: 100%;
   text-align: center;
+  position: relative;
+  top:10px;
 }
 
 .login-submit-btn {
